crates/templates/tests/snapshots/command_usage_test__render-14.snap
---
source: crates/templates/tests/command_usage_test.rs
description: "Command usage with two positional arguments, the last muliple"
expression: output
---
foo_usage() {
  printf "Test simple usage\n"

  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  foo [OPTIONS] FOO BAR...\n"
  printf "  foo -h|--help\n"
  printf "\n\033[4m%s\033[0m\n" "Arguments:"
  printf "  FOO\n"
  printf "    Test foo positional argument\n"
  printf "    [@required, @default bar]\n"
  printf "  BAR\n"
  printf "    Test foo positional argument\n"
  printf "    [@required, @multiple, @default baz]\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -h --help\n"
  printf "    Print help\n"
}
